--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -6,14 +6,39 @@
 
 body {
   font: 13px Helvetica, Arial;
+  background-color: #DDFFFF;
+}
+
+#container {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
+
+#chat {
+  background-color: red;
+  border: solid;
+  float:left;
+  left: 0;
+  width: 50%;
+  height: 100%;
+}
+
+#webm {
+  background-color: blue;
+  float:right;
+  right: 0;
+  width: 50%;
+  height: 100%;
 }
 
 form {
   background: #000;
   padding: 3px;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
+  float: left;
+  position: absolute;
+  top: 94%;
+  width: 49.7%;
 }
 
 form input {
@@ -34,6 +59,9 @@ form button {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  width: 100%;
+  float:left;
+  position: relative;
 }
 
 #messages li {
