--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -4,9 +4,23 @@
   box-sizing: border-box;
 }
 
-body {
-  font: 13px Helvetica, Arial;
-  background-color: #DDFFFF;
+#messages li{
+    background-color: #F2F2F2;
+    border-radius: 5px;
+    box-shadow: 0 0 6px #B2B2B2;
+    display: inline-block;
+    padding: 10px 18px;
+    position: relative;
+    vertical-align: top;
+}
+
+#messages li::before {
+    background-color: #F2F2F2;
+    display: block;
+    height: 16px;
+    position: absolute;
+    top: 11px;
+    width:  20px;
 }
 
 #container {
@@ -16,7 +30,6 @@ body {
 }
 
 #chat {
-  background-color: red;
   border: solid;
   float:left;
   left: 0;
@@ -36,7 +49,7 @@ form {
   padding: 3px;
   float: left;
   position: absolute;
-  top: 94%;
+  top: 93%;
   width: 49.7%;
 }
 
@@ -47,28 +60,24 @@ form input {
   margin-right: .5%;
 }
 
-form button {
-  width: 9%;
-  background: rgb(130, 224, 255);
-  border: none;
-  padding: 10px;
-}
-
 #messages {
   list-style-type: none;
+  color: #fff;
   margin: 0;
   padding: 0;
   width: 100%;
-  float:left;
   position: relative;
 }
 
-#messages li {
-  padding: 5px 10px;
+#messages li:nth-child(odd) {
+  color: #000;
+  background: #eee;
+  margin-right: 70%;
 }
 
-#messages li:nth-child(odd) {
-  background: #eee;
+#messages li:nth-child(even) {
+  background: #26a69a;
+  margin-left: 70%;
 }
 
 #webmFrame {
