--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -4,6 +4,42 @@
   box-sizing: border-box;
 }
 
+#chatbox {
+  padding: 3px;
+  float: left;
+  position: absolute;
+  top: 85%;
+  width: 49.7%;
+}
+
+#m {
+  border: 0;
+  padding: 10px;
+  width: 90%;
+  margin-right: .5%;
+}
+
+nav {
+  background: #26a69a;
+}
+
+#chat {
+  background: #E6E6E6;
+  border: 1px solid;
+  float:left;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  padding-top: 2%;
+}
+
+#container {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
+
 #messages li{
     background-color: #F2F2F2;
     border-radius: 5px;
@@ -23,43 +59,6 @@
     width:  20px;
 }
 
-#container {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-}
-
-#chat {
-  border: solid;
-  float:left;
-  left: 0;
-  width: 50%;
-  height: 100%;
-}
-
-#webm {
-  background-color: blue;
-  float:right;
-  right: 0;
-  width: 50%;
-  height: 100%;
-}
-
-form {
-  padding: 3px;
-  float: left;
-  position: absolute;
-  top: 93%;
-  width: 49.7%;
-}
-
-form input {
-  border: 0;
-  padding: 10px;
-  width: 90%;
-  margin-right: .5%;
-}
-
 #messages {
   list-style-type: none;
   color: #fff;
@@ -71,7 +70,6 @@ form input {
 
 #messages li:nth-child(odd) {
   color: #000;
-  background: #eee;
   margin-right: 70%;
 }
 
@@ -82,4 +80,11 @@ form input {
 
 #webmFrame {
   display:none;
+}
+
+#webm {
+  float:right;
+  right: 0;
+  width: 50%;
+  height: 100%;
 }
